Changed Spanish string.

--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -115,7 +115,7 @@
 # Project details
 
 - id: open_project_site
-  translation: Ir al sitio del proyecto
+  translation: Ver web del proyecto
 
 # Default node titles
 
